--- a/index.html
+++ b/index.html
@@ -1,22 +1,51 @@
 <main id="main">
-    <!DOCTYPE html>
-    <html lang="en"></html>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="styles.css">
-    <title>Lionel Messi</title>
-    <body>
-      <h1 id="title">Lionel Messi</h1>
-      <p id="lol"> The man who won Millions of Hearts</p>
-      <div id="img-div">
-        <img id="image" src="https://external-preview.redd.it/psg-will-not-let-lionel-messi-parade-the-world-cup-trophy-v0-INqBkQhR28-VcarrAJVXlBILjc0FsHecBCBK5yBAhvg.jpg?auto=webp&s=e968a1e50153e9122d5755a24771c5866b6ee38a" alt="Lionel Messi image">
-        <figcaption id="img-caption">Lionel Messi after winning the 2022 World cup with Argentina</figcaption>
-      </div>
-      <hr></hr>
-      <h2 id="tribute-info">Some Highlights of Messi's Life</h2>
-      <p class="first">Messi relocated to Spain and joined Barcelona aged 13, making his competitive debut at age 17 in October 2004. He established himself as an integral player for the club within the next three years, and in his first uninterrupted season in 2008–09 helped Barcelona achieve the first treble in Spanish football; that year, aged 22, Messi won his first Ballon d'Or. Messi won four consecutive Ballons d'Or, the first player to win it four times. During the 2011–12 season, he set La Liga and European records for most goals in a season, while establishing himself as Barcelona's all-time top scorer. The following two seasons, he finished second for the Ballon d'Or behind Cristiano Ronaldo, his perceived career rival, before regaining his best form during the 2014–15 campaign, becoming the all-time top scorer in La Liga and leading Barcelona to a historic second treble, and was awarded a fifth Ballon d'Or in 2015. Messi assumed captaincy of Barcelona in 2018, and won a record sixth Ballon d'Or in 2019. He signed for French club Paris Saint-Germain in August 2021, spending two seasons there and winning Ligue 1 twice. Messi joined American club Inter Miami in July 2023, winning the Leagues Cup in August.
-        Messi was born on 24 June 1987 in Rosario, Santa Fe,[11] the third of four children of Jorge Messi, a steel factory manager, and his wife Celia Cuccittini, who worked in a magnet manufacturing workshop. On his father's side, he is of Italian and Spanish descent, the great-grandson of immigrants from the north-central Adriatic Marche region of Italy, and on his mother's side, he has primarily Italian ancestry.[3] Growing up in a tight-knit, football-loving family, "Leo" developed a passion for the sport from an early age, playing constantly with his older brothers, Rodrigo and Matías, and his cousins, Maximiliano and Emanuel Biancucchi, both of whom became professional footballers.[12] At the age of four he joined local club Grandoli, where he was coached by his father, though his earliest influence as a player came from his maternal grandmother, Celia, who accompanied him to training and matches.[13] He was greatly affected by her death, shortly before his eleventh birthday; since then, as a devout Catholic, he has celebrated his goals by looking up and pointing to the sky in tribute to his grandmother.
-      </p>
-      <hr></hr>
-      <a id="tribute-link" target="_blank" href="https://en.wikipedia.org/wiki/Lionel_Messi"><p id="kofta">More about Messi's Life</p></a>
-    </body>
-    </main>
+  <!DOCTYPE html>
+  <html lang="en">
+
+  </html>
+  <meta charset="utf-8">
+  <link rel="stylesheet" href="styles.css">
+  <title>Lionel Messi</title>
+
+  <body>
+    <h1 id="title">Lionel Messi</h1>
+    <p id="lol"> The man who won Millions of Hearts</p>
+    <div id="img-div">
+      <img id="image"
+        src="https://external-preview.redd.it/psg-will-not-let-lionel-messi-parade-the-world-cup-trophy-v0-INqBkQhR28-VcarrAJVXlBILjc0FsHecBCBK5yBAhvg.jpg?auto=webp&s=e968a1e50153e9122d5755a24771c5866b6ee38a"
+        alt="Lionel Messi image">
+      <figcaption id="img-caption">Lionel Messi after winning the 2022 World cup with Argentina</figcaption>
+    </div>
+    <hr>
+    </hr>
+    <h2 id="tribute-info">Some Highlights of Messi's Life</h2>
+    <p class="first">Messi relocated to Spain and joined Barcelona aged 13, making his competitive debut at age 17 in
+      October 2004. He established himself as an integral player for the club within the next three years, and in his
+      first uninterrupted season in 2008–09 helped Barcelona achieve the first treble in Spanish football; that year,
+      aged 22, Messi won his first Ballon d'Or. Messi won four consecutive Ballons d'Or, the first player to win it four
+      times. During the 2011–12 season, he set La Liga and European records for most goals in a season, while
+      establishing himself as Barcelona's all-time top scorer. The following two seasons, he finished second for the
+      Ballon d'Or behind Cristiano Ronaldo, his perceived career rival, before regaining his best form during the
+      2014–15 campaign, becoming the all-time top scorer in La Liga and leading Barcelona to a historic second treble,
+      and was awarded a fifth Ballon d'Or in 2015. Messi assumed captaincy of Barcelona in 2018, and won a record sixth
+      Ballon d'Or in 2019. He signed for French club Paris Saint-Germain in August 2021, spending two seasons there and
+      winning Ligue 1 twice. Messi joined American club Inter Miami in July 2023, winning the Leagues Cup in August.
+      Messi was born on 24 June 1987 in Rosario, Santa Fe,[11] the third of four children of Jorge Messi, a steel
+      factory manager, and his wife Celia Cuccittini, who worked in a magnet manufacturing workshop. On his father's
+      side, he is of Italian and Spanish descent, the great-grandson of immigrants from the north-central Adriatic
+      Marche region of Italy, and on his mother's side, he has primarily Italian ancestry.[3] Growing up in a
+      tight-knit, football-loving family, "Leo" developed a passion for the sport from an early age, playing constantly
+      with his older brothers, Rodrigo and Matías, and his cousins, Maximiliano and Emanuel Biancucchi, both of whom
+      became professional footballers.[12] At the age of four he joined local club Grandoli, where he was coached by his
+      father, though his earliest influence as a player came from his maternal grandmother, Celia, who accompanied him
+      to training and matches.[13] He was greatly affected by her death, shortly before his eleventh birthday; since
+      then, as a devout Catholic, he has celebrated his goals by looking up and pointing to the sky in tribute to his
+      grandmother.
+    </p>
+    <hr>
+    </hr>
+    <a id="tribute-link" target="_blank" href="https://en.wikipedia.org/wiki/Lionel_Messi">
+      <p id="kofta">More about Messi's Life</p>
+    </a>
+  </body>
+</main>
